@@ -1326,7 +1326,7 @@
 //-- NC_PILEBUNKER
 2257,0,1000,5000,0,0,0
 //-- NC_VULCANARM
-2258,0,500,0,0,0,0
+2258,0,500:300:100,0,0,0,0
 //-- NC_FLAMELAUNCHER -- Assuming 20 seconds duration of burning effect.
 2259,1600:2000:2400,1500:1000:500,0,0,20000,0
 //-- NC_COLDSLOWER -- Assuming duration for frozen and freezing effect.
@@ -1338,7 +1338,7 @@
 //-- NC_HOVERING
 2263,0,0,0,0,30000,0
 //-- NC_SELFDESTRUCTION
-2267,3500,500,0,0,0,0
+2267,3500:3000:2500,0,0,0,0,0
 //-- NC_SHAPESHIFT
 2268,3000,2000,0,0,300000,0
 //-- NC_INFRAREDSCAN
@@ -1353,6 +1353,8 @@
 2279,0,500,0,0,3000,0
 //-- NC_AXETORNADO
 2280,0,1000,0,0,0,0
+//-- NC_SILVERSNIPER
+2281,2000,500,0,0,10000:15000:20000:25000:30000,0
 //==========================================
 
 //===== Shadow Chaser ======================
@@ -1466,17 +1468,17 @@
 
 //==== Genetic skills ======================
 //-- GN_CART_TORNADO
-2476,1000,2000,0,0,5000,0
+2476,0,500,500:700:900:1100:1300,0,5000,0
 //-- GN_CARTCANNON
-2477,2000,1000,0,0,0,0
+2477,1000,500,0,0,0,0
 //-- GN_CARTBOOST
 2478,0,0,0,0,90000,0
 //-- GN_THORNS_TRAP
-2479,1000,0,0,0,10000:12000:14000:16000:18000,20000
+2479,3000,0,0,0,10000:12000:14000:16000:18000,20000
 //-- GN_BLOOD_SUCKER
-2480,1000,0,0,0,20000:22000:24000:26000:28000,0
+2480,3000,0,0,0,20000:22000:24000:26000:28000,0
 //-- GN_SPORE_EXPLOSION
-2481,3000,0,0,0,2000:2000:3000:3000:4000,0
+2481,3000,0,2000:2000:3000:3000:4000,0,2000:2000:3000:3000:4000,0
 //-- GN_WALLOFTHORN
 2482,2000,0,0,0,10000:11000:12000:13000:14000,0
 //-- GN_CRAZYWEED
