@@ -2222,6 +2222,8 @@ static struct Damage battle_calc_weapon_attack(struct block_list *src,struct blo
 				if( src->type == BL_MOB && (skill=pc_checkskill(tsd,RA_RANGERMAIN))>0 && 
 					(sstatus->race == RC_BRUTE || sstatus->race == RC_FISH || sstatus->race == RC_PLANT) )
 					vit_def += skill*5;
+				if( skill = pc_checkskill(tsd, NC_MAINFRAME) > 0 )
+					vit_def += ((skill >= 1 && skill <= 2)? 1+3*skill : skill == 3) ? 11 : 15;
 			} else { //Mob-Pet vit-eq
 				//VIT + rnd(0,[VIT/20]^2-1)
 				vit_def = (def2/20)*(def2/20);
