@@ -6776,6 +6776,14 @@ int pc_setoption(struct map_session_data *sd,int type)
 	{
 		if( pc_checkskill(sd, NC_MADOLICENCE) < 5 )
 			status_calc_pc(sd, 0); // Remove speed penalty.
+
+		if( sd->sc.data[SC_SHAPESHIFT] || sd->sc.data[SC_HOVERING] ||
+			sd->sc.data[SC_ACCELERATION] )
+		{
+			status_change_end(&sd->bl, SC_SHAPESHIFT, -1);
+			status_change_end(&sd->bl, SC_HOVERING, -1);
+			status_change_end(&sd->bl, SC_ACCELERATION, -1);
+		}
 	}
 
 	if (type&OPTION_FLYING && !(p_type&OPTION_FLYING))
